<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ABB_ControlWord" Id="{84fe7b3d-aaf6-4df5-b7c2-3efdc6eb76c6}">
    <Declaration><![CDATA[TYPE ABB_ControlWord :
STRUCT
	OFF1_CONTROL 		: BIT; //1=READY TO OPERATE, 0=STOP ALONG THE CURRENTLY ACTIVE DECEL RAMP
	OFF2_CONTROL 		: BIT; //1=CONTINUE OPERATION, 0=EMERGENCY OFF, COAST TO STOP
	OFF3_CONTROL 		: BIT; //1=CONTINUE OPERATION, 0=EMERGENCY STOP, STOP WITHIN THE TIME DEFINED BY THE DRIVE PARAMETER
	RUN 				: BIT; //1=OPERATION ENABLED, 0=OPERATION INHIBITED
	RAMP_OUT_ZERO 		: BIT; //1=NORMAL OPERATION RAMP FUNCTION GENERATOR, 0=FORCE RAMP FUNCTION OUTPUT TO 0
	RAMP_HOLD 			: BIT; //1=NORMAL OPERATION RAMP FUNCTION GENERATOR, 0=HALT RAMPING
	RAMP_IN_ZERO 		: BIT; //1=NORMAL OPERATION RAMP FUNCTION GENERATOR, 0=FORCE RAMP FUNCTION INPUT TO 0
	RESET 				: BIT; //0=>1 RESET ACTIVE FAULT
	INCHING_1 			: BIT; //1=ACCELERATE TO INCHING (JOGGING) SETPOINT 1, 0=DISABLED
	INCHING_2 			: BIT; //1=ACCELERATE TO INCHING (JOGGING) SETPOINT 2, 0=DISABLED
	REMOTE_CMD 			: BIT; //1=FIELDBUS CONTROL ENABLED, 0=LOCAL CONTROL
	EXT_CTRL_LOC 		: BIT; //NOT USED
	BIT_12 				: BIT; //NOT USED
	BIT_13 				: BIT; //NOT USED
	BIT_14 				: BIT; //NOT USED
	BIT_15 				: BIT; //NOT USED
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>