<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ABB_StatusWord" Id="{6e4f4b85-5bcd-46ff-869b-908594221d2d}">
    <Declaration><![CDATA[TYPE ABB_StatusWord :
STRUCT
	RDY_ON 			: BIT; //1=READY TO SWITCH ON, 0=NOT READY
	RDY_RUN 		: BIT; //1=READY TO OPERATE, 0=OFF1 ACTIVE
	RDY_REF 		: BIT; //1=OPERATION ENABLED, 0=OPERATION INHIBITED
	TRIPPED 		: BIT; //1=FAULT, 0=NO FAULT
	OFF_2_STA 		: BIT; //1=OFF2 INACTIVE, 0=OFF2 ACTIVE
	OFF_3_STA 		: BIT; //1=OFF3 INACTIVE, 0=OFF3 ACTIVE
	SWC_ON_INHIB 	: BIT; //1=SWITCH-ON INHIBITED, 0=-
	WARNING 		: BIT; //1=ALARM/WARNING, 0=NO ALARM/WARNING
	AT_SETPOINT 	: BIT; //1=ACTUAL REFERENCE IS WITHIN TOLERANCE LIMITS
	REMOTE 			: BIT; //1=DRIVE CONTROL REMOTE, 0=DRIVE CONTROL LOCAL
	ABOVE_LIMIT 	: BIT; //1=FREQUENCY/SPEED EXCEEDS LIMITS 0=WITHIN LIMITS
	BIT_11 			: BIT; //1=EXTERNAL CONTROL EXT2 SELECTED, 0=EXTERNAL CONTROL EXT1 SELECTED
	BIT_12		 	: BIT; //1=EXTERNAL RUN ENABLE SIGNAL RECEIVED, 0=NO RUN ENABLE SIGNAL RECEIVED
	BIT_13 			: BIT; //NOT USED
	BIT_14 			: BIT; //NOT USED
	FBA_ERROR 		: BIT; //1=COMMUNICATION ERROR DETECTED, 0=COMMUNICATION OK	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>